confirm application to hackathon and send confirmation email

--- a/nucleus/templates/static_pages/index.html
+++ b/nucleus/templates/static_pages/index.html
@@ -1,3 +1,4 @@
 <h1>Nucelus by Team HackTX</h1>
 
-<button>Apply to HackTX</button>
+{#<button>Apply to HackTX</button>#}
+<a href="https://my.mlh.io/oauth/authorize?client_id=61d0d7bf56ab02f4a0dcdddc26816c27164748890de08ddd809877ba3f229b15&redirect_uri=http%3A%2F%2F127.0.0.1%3A5000%2Fcallback&response_type=code">Apply</a>
