display flashed messages

--- a/nucleus/templates/layouts/base.html
+++ b/nucleus/templates/layouts/base.html
@@ -6,6 +6,15 @@
   <meta name="viewport" content="initial-scale=1">
 </head>
 <body>
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 {%  block body %}
-{%  endblock body %}
+{%  endblock %}
 </body>
