fixed bugs when generifying

--- a/nucleus/templates/users/confirmed.html
+++ b/nucleus/templates/users/confirmed.html
@@ -1,4 +1,4 @@
 {% extends 'layouts/base.html' %}
 {% block body %}
-You are confirmed to attend
+You are confirmed to attend <a href="/logout">Logout</a>
 {% endblock %}
