build out admin dash

--- a/nucleus/templates/static_pages/index.html
+++ b/nucleus/templates/static_pages/index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/base.html' %}
 {% block body %}
 <h1>Nucleus by Team HackTX</h1>
-<a href="https://my.mlh.io/oauth/authorize?client_id={{ config.MLH_APPLICATION_ID }}&redirect_uri={{ config.BASE_URL | urlencode}}callback&response_type=code">Apply</a>
+<a href="https://my.mlh.io/oauth/authorize?client_id={{ config.MLH_APPLICATION_ID }}&redirect_uri={{ config.BASE_URL | urlencode}}callback&response_type=code">Sign in with MyMLH</a>
 {% endblock %}
