--- a/nucleus/templates/users/dashboard/dashboard.html
+++ b/nucleus/templates/users/dashboard/dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/base.html' %}
 {% block body %}
-You are confirmed to attend <a href="/logout">Logout</a>
+Dashboard
+    {{ user.fname }}
 {% endblock %}
