--- a/nucleus/templates/layouts/base.html
+++ b/nucleus/templates/layouts/base.html
@@ -15,6 +15,9 @@
     </ul>
   {% endif %}
 {% endwith %}
+{% if g.user.is_authenticated %}
+<a href="{{ url_for('logout') }}">Logout</a>
+{% endif %}
 {%  block body %}
 {%  endblock %}
 </body>
