--- a/nucleus/templates/layouts/base.html
+++ b/nucleus/templates/layouts/base.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>{% block title %}{{config.SERVICE_NAME}}{% endblock %}</title>
   <meta name="viewport" content="initial-scale=1">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
 {% with messages = get_flashed_messages() %}
