--- a/nucleus/templates/static_pages/index.html
+++ b/nucleus/templates/static_pages/index.html
@@ -1,5 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% block body %}
+    <img src="{{ url_for('static', filename='branding/logo.png') }}">
 <h1>Nucleus by Team HackTX</h1>
-<a href="https://my.mlh.io/oauth/authorize?client_id={{ config.MLH_APPLICATION_ID }}&redirect_uri={{ config.BASE_URL | urlencode}}callback&response_type=code">Sign in with MyMLH</a>
+    <a href="{{ url_for('login') }}" class=""><button>Sign in with MyMLH</button></a>
 {% endblock %}
