added redis for toggling open; may be removed later

--- a/nucleus/static/scss/main.scss
+++ b/nucleus/static/scss/main.scss
@@ -1,8 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700italic,900,900italic,400italic,700,300italic,300,100,100italic);
-
+@import url(https://fonts.googleapis.com/css?family=Josefin+Sans);
 $dark: #002db3;
 $light: #009999;
-$sans-serif-font: Lato, sans-serif;
+$sans-serif-font: Josefin Sans, sans-serif;
 *{
   font-family: $sans-serif-font;
 }
