--- a/nucleus/static/css/main.css
+++ b/nucleus/static/css/main.css
@@ -1,30 +1,30 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700italic,900,900italic,400italic,700,300italic,300,100,100italic);
+@import url(https://fonts.googleapis.com/css?family=Josefin+Sans);
 * {
-  font-family: Lato, sans-serif; }
+  font-family: Josefin Sans, sans-serif; }
 
 body {
   background: #002db3;
   color: white !important; }
   body ::-webkit-input-placeholder {
     /* WebKit browsers */
-    font-family: Lato, sans-serif;
+    font-family: Josefin Sans, sans-serif;
     color: white;
     font-weight: 300; }
   body :-moz-placeholder {
     /* Mozilla Firefox 4 to 18 */
-    font-family: Lato, sans-serif;
+    font-family: Josefin Sans, sans-serif;
     color: white;
     opacity: 1;
     font-weight: 300; }
   body ::-moz-placeholder {
     /* Mozilla Firefox 19+ */
-    font-family: Lato, sans-serif;
+    font-family: Josefin Sans, sans-serif;
     color: white;
     opacity: 1;
     font-weight: 300; }
   body :-ms-input-placeholder {
     /* Internet Explorer 10+ */
-    font-family: Lato, sans-serif;
+    font-family: Josefin Sans, sans-serif;
     color: white;
     font-weight: 300; }
   body a {
