--- a/nucleus/templates/users/dashboard/admin_dashboard.html
+++ b/nucleus/templates/users/dashboard/admin_dashboard.html
@@ -1,6 +1,10 @@
 {% extends 'layouts/base.html' %}
 {% block body %}
     HELLO ADMIN!
+    Here are some actions you can do:
+    <ul>
+    <li><a href="{{ url_for('activate') }}">Activate Nucleus</a> </li>
+    </ul>
     <ul>
     {% for user in users %}
         <li>{{ user.created }}</li>
