add functionality to create a corporate user

--- a/nucleus/templates/users/dashboard/admin_dashboard.html
+++ b/nucleus/templates/users/dashboard/admin_dashboard.html
@@ -3,7 +3,7 @@
     HELLO ADMIN!
     Here are some actions you can do:
     <ul>
-    <li><a href="{{ url_for('activate') }}">Activate Nucleus</a> </li>
+{#    <li><a href="{{ url_for('activate') }}">Activate Nucleus</a> </li>#}
     </ul>
     <ul>
     {% for user in users %}
