--- a/mito/templates/corporate/results.html
+++ b/mito/templates/corporate/results.html
@@ -1,4 +1,11 @@
 Univ
+
+<h1>Users</h1>
+{% for user in users %}
+
+{{ user.fname }} {{ user.lname }} <a href="{{ url_for('resume-view') }}?id={{ user.hashid }}">View Resume</a>
+
+{% endfor %}
 {% if universities %}
     {% for university in universities %}
 		<p>{{ university }}</p>
