fix corp login and search page

--- a/mito/templates/corporate/dashboard.html
+++ b/mito/templates/corporate/dashboard.html
@@ -1,1 +1,3 @@
-This is the corporate dashboard
+<h1>Hi {{ user.fname }}!</h1>
+
+<p>We're super excited for you to join us at {{ config.HACKATHON_NAME }}! We're proud to have a diverse array of hackers who are eager to meet you. To get started, many of them have uploaded their resume to our portal. We've built a portal for you to either choose to download all attendee resumes or you can search for attendees by applying specific filters based on school, major, or class standing.</p>
