--- a/mito/templates/corporate/search.html
+++ b/mito/templates/corporate/search.html
@@ -16,4 +16,5 @@
 		<option value="{{ class_standing }}">{{ class_standing }}</option>
 		{% endfor %}
 	</select>
+<button type="submit">Submit</button>
 </form>
