added basics of account setup TODO: fix single roles issue

--- a/mito/templates/emails/corporate_welcome.html
+++ b/mito/templates/emails/corporate_welcome.html
@@ -1,3 +1,5 @@
 Hey {{ user.fname }},
 
 Thanks for joining us for {{ config.HACKATHON_NAME }}! You now have access to my{{ config.HACKATHON_NAME }}, a secure portal to download resumes and search for particular attendees information.
+
+To join, please click <a href="{{ setup_url }}">here</a>
