--- a/mito/templates/corporate/login.html
+++ b/mito/templates/corporate/login.html
@@ -1,3 +1,12 @@
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 Login page for corporate
 <form action="" method="post">
     <div class="form-group">
