--- a/mito/templates/layouts/base.html
+++ b/mito/templates/layouts/base.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{% block title %}{{config.SERVICE_NAME}}{% endblock %}</title>
+  <title>{% block title %}{{config.HACKATHON_NAME}}{% endblock %}</title>
   <meta name="viewport" content="initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
@@ -17,8 +19,19 @@
   {% endif %}
 {% endwith %}
 {% if g.user.is_authenticated %}
+	<nav>
+
+	</nav>
 <a href="{{ url_for('logout') }}">Logout</a>
 {% endif %}
+<div class="container">
 {%  block body %}
 {%  endblock %}
+</div>
+
+<footer class="footer">
+	<div class="col-md-6 col-md-offset-3">
+{#		<a href="https://freetailhackers.com"><img class="img-responsive" class="center" src="{{url_for('static', filename='img/logo.svg')}}" width=50></a>#}
+      </div>
+</footer>
 </body>
