--- a/mito/templates/static_pages/index.html
+++ b/mito/templates/static_pages/index.html
@@ -1,6 +1,37 @@
 {% extends 'layouts/base.html' %}
 {% block body %}
-    <img src="{{ url_for('static', filename='branding/logo.png') }}">
-<h1>Nucleus by Team HackTX</h1>
-    <a href="{{ url_for('login') }}" class=""><button>Sign in with MyMLH</button></a>
+  <div class="bg">
+    <section class="header">
+        <div class="container">
+{#            <a href="http://freetailhackers.com"><img class="logo img-responsive" src="{{ url_for('static', filename='branding/badge.svg') }}"></a>#}
+        </div>
+    </section>
+
+    <section class="content">
+      <img class="hacktx-logo img-responsive" src="{{ url_for('static', filename='branding/logo.png') }}"/>
+      <div class="center"><h3>Austin, TX | October 22-23, 2016</h3></div>
+		<a href="{{ url_for('login') }}"><button class="col-md-4 col-md-offset-4 col-xs-8 col-xs-offset-2 submit text-center register-now title-buttons">Sign in with MyMLH</button></a>
+    </section>
+  </div>
+
+
+
+
+
+
+
+
+
+
+{##}
+{##}
+{#    <img src="{{ url_for('static', filename='branding/logo.png') }}">#}
+{#	<h3>Austin, TX | October 22-23</h3>#}
+{#    <a href="{{ url_for('login') }}" class=""><button>Sign in with MyMLH</button></a>#}
+{##}
+{#	<footer>#}
+{#		<a href="https://www.facebook.com/HackTX"><i class="fa fa-facebook-official fa-2x"></i></a>#}
+{#		<a href="https://twitter.com/HackTX"><i class="fa fa-twitter fa-2x"></i></a>#}
+{#		<a href="https://github.com/hacktx"><i class="fa fa-github fa-2x"></i></a>#}
+{#	</footer>#}
 {% endblock %}
