--- a/mito/templates/users/confirm.html
+++ b/mito/templates/users/confirm.html
@@ -106,15 +106,15 @@
 	<div class="control-group">
     <h4>Is this your first hackathon?</h4>
     <label class="control control--radio">Yes
-      <input type="radio" name="radio"/>
+      <input type="radio" name="first-time" value="YES"/>
       <div class="control__indicator"></div>
     </label>
     <label class="control control--radio">No
-      <input type="radio" name="radio"/>
+      <input type="radio" name="first-time" value="NO"/>
       <div class="control__indicator"></div>
     </label>
 	<label class="control control--radio">I choose not to disclose
-      <input type="radio" name="radio"/>
+      <input type="radio" name="first-time" value="NO_DISCLOSURE">
       <div class="control__indicator"></div>
     </label>
   </div>
