--- a/mito/templates/users/dashboard/pending.html
+++ b/mito/templates/users/dashboard/pending.html
@@ -1,8 +1,14 @@
 {% extends 'layouts/base.html' %}
 {% block body %}
-    Thanks for applying to {{ config.HACKATHON_NAME }} {{ user.fname }}! Our team is currently processing applications, and we'll send you an email once we have more info.
-    {% for role in user.roles %}
-    {{ role.name }}
-    {% endfor %}
-<a href="{{ url_for('logout') }}">Logout</a>
+	<script src="{{ url_for('static', filename='js/pending.js') }}"></script>
+	<div class="text-center col-md-8 col-md-offset-2">
+	<h1>Thanks for applying to {{ config.HACKATHON_NAME }} {{ user.fname }}!</h1>
+	<p>We'll accept the majority of our attendees through first-come first-serve, but we've also reserved a block of our slots for a random lottery in case you weren't one of the first to apply.</p>
+	<p>We'll make sure to send you an email when we have more info for you, but while you're waiting we have a cute GIF for you to look at</p>
+	<img src="{{ url_for('static', filename='img/puppy.gif') }}" class="puppy">
+	</div>
+{#    {% for role in user.roles %}#}
+{#    {{ role.name }}#}
+{#    {% endfor %}#}
+{#<a href="{{ url_for('logout') }}">Logout</a>#}
 {% endblock %}
